--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.3",
+    "gt3-sdk": "^2.0.0",
     "jsonwebtoken": "^7.4.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0"
