--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,13 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "crypto": "0.0.3",
     "express": "^4.15.2",
     "express-session": "^1.15.3",
     "gt3-sdk": "^2.0.0",
     "jsonwebtoken": "^7.4.1",
     "multer": "^1.3.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "redis": "^2.7.1"
   }
 }
